[gd_scene load_steps=23 format=2]

[ext_resource path="res://players/player_fixed_move.gd" type="Script" id=1]
[ext_resource path="res://rifle.tscn" type="PackedScene" id=2]
[ext_resource path="res://weaponcamera.gd" type="Script" id=3]
[ext_resource path="res://gun-fire.gd" type="Script" id=4]
[ext_resource path="res://crosshair.tscn" type="PackedScene" id=5]
[ext_resource path="res://city_with_no_wind_cut_version.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/songs/underscores - the city with no wind.mp3" type="AudioStream" id=7]
[ext_resource path="res://booper-mover.gd" type="Script" id=8]
[ext_resource path="res://booper.tscn" type="PackedScene" id=9]
[ext_resource path="res://blaster.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="Animation" id=3]
resource_name = "down"
length = 86.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 86 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.1, 3 ), Vector3( 0, -50, 3 ) ]
}

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=5]
resource_name = "down"
length = 86.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 86 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.1, 3 ), Vector3( 0, -50, 3 ) ]
}

[sub_resource type="SphereMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0, 0, 0.792157 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.968627, 1, 0, 1 )

[sub_resource type="CapsuleShape" id=9]
height = 2.0

[sub_resource type="CapsuleMesh" id=10]
mid_height = 2.0

[sub_resource type="Animation" id=11]
length = 0.1
step = 0.005
tracks/0/type = "transform"
tracks/0/path = NodePath("Cambase/Spatial/explosion")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 1, 0.3, -3, 0, 0, 0, 1, 5.96046e-07, 5.96046e-07, 5.96046e-07, 0.005, 1, 1, 0.3, -5, 0, 0, 0, 1, 1, 1, 2, 0.07, 1, 1, 0.3, -5, 0, 0, 0, 1, 1, 1, 2, 0.075, 1, 1, 0.3, -6, 0, 0, 0, 1, 0, 0, 0 )

[sub_resource type="Animation" id=12]
length = 0.1
step = 0.005
tracks/0/type = "transform"
tracks/0/path = NodePath("Cambase/Spatial/explosion2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 1, 0.3, -5, 0, 0, 0, 1, 0, 0, 0, 0.005, 1, 1, 0.3, -5, 0, 0, 0, 1, 1, 1, 2, 0.07, 1, 1, 0.3, -5, 0, 0, 0, 1, 1, 1, 2, 0.075, 1, 1, 0.3, -5, 0, 0, 0, 1, 0, 0, 0 )

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )
cam_path = NodePath("Cambase")
guno_path = NodePath("booper-hitter")
cty_player_path = NodePath("cty_with_no_wind_boopers/city_with_no_wind_player")

[node name="booper-hitter" type="Area" parent="."]
transform = Transform( 1, 0, -3.97904e-13, 0, 1, 0, 3.97904e-13, 0, 1, 1.39266e-12, 0, -3 )
script = ExtResource( 4 )
ray_path = NodePath("../Cambase/Spatial/RayCast")
explo_path = NodePath("../Cambase/Spatial/explosion")
explo_path2 = NodePath("../Cambase/Spatial/explosion2")
explo_anim_path = NodePath("../AnimationPlayer")
explo_anim_path2 = NodePath("../AnimationPlayer2")
player_path = NodePath("..")

[node name="CollisionShape" type="CollisionShape" parent="booper-hitter"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.244813, -1, 6.5 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="booper-hitter/CollisionShape"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
layers = 8
mesh = SubResource( 2 )
material/0 = null

[node name="cty_with_no_wind_boopers" type="KinematicBody" parent="."]
transform = Transform( -0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, -0.1, 3 )
visible = false
script = ExtResource( 8 )

[node name="city_with_no_wind_player" type="AnimationPlayer" parent="cty_with_no_wind_boopers"]
anims/down = SubResource( 3 )

[node name="the_city_with_no_wind" type="Spatial" parent="cty_with_no_wind_boopers"]

[node name="booper" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.568, 0 )

[node name="booper2" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 3.21964, 0 )

[node name="booper3" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 4.872, 0 )

[node name="booper4" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 6.524, 0 )

[node name="booper5" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 8.176, 0 )

[node name="booper6" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 9.828, 0 )

[node name="booper7" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 11.48, 0 )

[node name="booper8" parent="cty_with_no_wind_boopers/the_city_with_no_wind" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 13.132, 0 )

[node name="the_city_with_no_wind2" type="Spatial" parent="cty_with_no_wind_boopers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.15, 0 )

[node name="booper" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.56773, 0 )

[node name="booper2" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 3.21964, 0 )

[node name="booper3" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 4.872, 0 )

[node name="booper4" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 6.524, 0 )

[node name="booper5" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 8.176, 0 )

[node name="booper6" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 9.828, 0 )

[node name="booper7" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 11.48, 0 )

[node name="booper8" parent="cty_with_no_wind_boopers/the_city_with_no_wind2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 13.132, 0 )

[node name="the_city_with_no_wind3" type="Spatial" parent="cty_with_no_wind_boopers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 26.31, 0 )

[node name="blaster" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.784, 0 )
material/0 = SubResource( 4 )

[node name="blaster2" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 7.308, 0 )
material/0 = SubResource( 4 )

[node name="blaster3" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 13.916, 0 )
material/0 = SubResource( 4 )

[node name="blaster4" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 20.174, 0 )
material/0 = SubResource( 4 )

[node name="booper" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.56773, 0 )

[node name="booper2" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 3.21964, 0 )

[node name="booper3" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 4.872, 0 )

[node name="booper4" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 6.524, 0 )

[node name="booper5" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 8.176, 0 )

[node name="booper6" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 9.828, 0 )

[node name="booper7" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 11.48, 0 )

[node name="booper8" parent="cty_with_no_wind_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 13.132, 0 )

[node name="the_city_with_no_wind4" type="Spatial" parent="cty_with_no_wind_boopers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 39.2, 0 )

[node name="booper" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.56773, 0 )

[node name="booper2" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 3.21964, 0 )

[node name="booper3" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 4.872, 0 )

[node name="booper4" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 6.524, 0 )

[node name="booper5" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 8.176, 0 )

[node name="booper6" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 9.828, 0 )

[node name="booper7" parent="cty_with_no_wind_boopers/the_city_with_no_wind4" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 11.48, 0 )

[node name="cty_cut_boopers" type="KinematicBody" parent="."]
transform = Transform( -0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, -0.1, 3 )
script = ExtResource( 8 )

[node name="city_with_no_wind_player" type="AnimationPlayer" parent="cty_cut_boopers"]
anims/down = SubResource( 5 )

[node name="the_city_with_no_wind3" type="Spatial" parent="cty_cut_boopers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.74846e-07, 2.31, -2 )

[node name="blaster" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 0.987008, 0, 0, 0, 0.139831, 0, 0, 0, 0.987008, 1.27011e-09, -0.240572, -0.0145283 )
material/0 = SubResource( 4 )

[node name="booper" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.142015, 0, 0, 0, 1, 0, -1.19089, 0 )

[node name="booper2" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.147251, 0, 0, 0, 1, 0, -0.737313, 0 )

[node name="blaster2" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 0.987008, 0, 0, 0, 0.139831, 0, 0, 0, 0.987008, 1.27011e-09, 1.46386, -0.0145283 )
material/0 = SubResource( 4 )

[node name="booper3" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.142015, 0, 0, 0, 1, 0, 0.513545, 0 )

[node name="booper4" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.147251, 0, 0, 0, 1, 0, 0.967121, 0 )

[node name="blaster3" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 0.987008, 0, 0, 0, 0.139831, 0, 0, 0, 0.987008, 1.27011e-09, 3.09746, -0.0145283 )
material/0 = SubResource( 4 )

[node name="booper5" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.142015, 0, 0, 0, 1, 0, 2.14715, 0 )

[node name="booper6" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.147251, 0, 0, 0, 1, 0, 2.60072, 0 )

[node name="blaster4" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 10 )]
transform = Transform( 0.987008, 0, 0, 0, 0.139831, 0, 0, 0, 0.987008, 1.27011e-09, 4.8019, -0.0145283 )
material/0 = SubResource( 4 )

[node name="booper7" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.142015, 0, 0, 0, 1, 0, 3.85158, 0 )

[node name="booper8" parent="cty_cut_boopers/the_city_with_no_wind3" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 0.147251, 0, 0, 0, 1, 0, 4.30516, 0 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 6
script = ExtResource( 3 )
camera_path = NodePath("../../../Cambase/Camera")

[node name="Cambase" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Cambase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 1048573
fov = 90.0
near = 0.01

[node name="crosshair" parent="Cambase" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5 )

[node name="Spatial" type="Spatial" parent="Cambase"]

[node name="rifle2" parent="Cambase/Spatial" instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 0, -0.25, 0, 0.5, 0, 0.5, 0, -1.09278e-08, 1, 0.3, -2 )

[node name="explosion" type="MeshInstance" parent="Cambase/Spatial"]
transform = Transform( 5.96046e-07, 0, 0, 0, 5.96046e-07, 0, 0, 0, 5.96046e-07, 1, 0.3, -3 )
layers = 2
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="explosion2" type="MeshInstance" parent="Cambase/Spatial"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0.3, -5 )
layers = 2
mesh = SubResource( 6 )
material/0 = SubResource( 8 )

[node name="RayCast" type="RayCast" parent="Cambase/Spatial"]
transform = Transform( 1, 0, -1.98952e-13, 0, 1, 0, 1.98952e-13, 0, 1, 0, 0.799999, 1.19209e-07 )
enabled = true
cast_to = Vector3( 0, 0, -250 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 10 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 11 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 12 )

[node name="songs" type="Spatial" parent="."]

[node name="the_city_with_no_wind" type="AudioStreamPlayer3D" parent="songs"]
stream = ExtResource( 7 )

[node name="city_cut" type="AudioStreamPlayer3D" parent="songs"]
stream = ExtResource( 6 )
max_db = 1.0

[connection signal="body_entered" from="booper-hitter" to="booper-hitter" method="_on_body_entered"]
